# demo-cmake-subproject-error

./: CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
tests/: CMakeLists.txt  tests.cpp
